fixed scrollbar bug

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ p {
   justify-content: center;
   background-color: #8395a7;
   z-index: -1;
+  overflow: hidden;
 }
 
 .content {
@@ -20,6 +21,7 @@ p {
   background-color: #c8d6e5;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
   z-index: 0;
+  overflow-y: scroll;
 }
 
 .header,
@@ -122,4 +124,9 @@ p {
 
 .form-control {
   border: none;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
 }
